deployed, sent off

--- a/html/index.html
+++ b/html/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>The Architectural Practice</title>
-    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Lora">
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Crete+Round">
     <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -37,6 +38,9 @@
     </p>
     <p>
         56 College St, Asheville, NC 28801
+        <a class="map-link" href="https://www.google.com/maps/place/The+Architectural+Practice,+Con+Dameron,+AIA/@35.5954529,-82.5552712,17z/data=!3m1!4b1!4m5!3m4!1s0x8859f357a86a710d:0x1cae5584400be4ae!8m2!3d35.5954529!4d-82.5530825" target="_blank">
+            <i class="fa fa-map-marker"></i>
+        </a>
     </p>
 
     <hr class="separator">
