tweak images, cleanup a bit

--- a/html/index.html
+++ b/html/index.html
@@ -38,8 +38,10 @@
     </p>
     <p>
         56 College St, Asheville, NC 28801
+        <br>
         <a class="map-link" href="https://www.google.com/maps/place/The+Architectural+Practice,+Con+Dameron,+AIA/@35.5954529,-82.5552712,17z/data=!3m1!4b1!4m5!3m4!1s0x8859f357a86a710d:0x1cae5584400be4ae!8m2!3d35.5954529!4d-82.5530825" target="_blank">
             <i class="fa fa-map-marker"></i>
+            map &raquo;
         </a>
     </p>
 
@@ -61,6 +63,7 @@
     <div class="work">
         <img src="img/work/skeleton.jpg" height="220">
         <img src="img/work/render-1.jpg" height="220">
+        <br>
         <img src="img/work/render-2.jpg" height="220">
         <img src="img/work/render-3.jpg" height="220">
     </div>
